--- a/javascirpt-data-structures/8-linked-list.html
+++ b/javascirpt-data-structures/8-linked-list.html
@@ -125,6 +125,36 @@
                 }
             }
 
+            search(value) {
+                if (this.isEmpty()) {
+                    return -1;
+                }
+                let i = 0;
+                let curr = this.head;
+                while (curr) {
+                    if (curr.value === value) {
+                        return i;
+                    }
+                    curr = curr.next;
+                    i++;
+                }
+                return -1;
+            }
+
+            reverse() {
+                let prev = null;
+                let curr = this.head;
+
+                while (curr) {
+                    let next = curr.next;
+                    curr.next = prev;
+                    prev = curr;
+                    curr = next;
+                }
+
+                this.head = prev;
+            }
+
             print() {
                 if (this.isEmpty()) {
                     console.log('list is empty');
@@ -175,7 +205,15 @@
         console.log("-----list remove from value-----")
         list.print()
         list.removeValue(30);
-        list.print()
+        list.print();
+
+        console.log("-----list search-----")
+        console.log(list.search(20));
+
+        console.log("-----list reserve-----")
+        list.reverse();
+        list.print();
+
     </script>
 </body>
 
